# chess_rust

./: Cargo.toml  README.md  blog.md  index.scss
benchmark/: Cargo.toml
benchmark/src/: main.rs
engine/: Cargo.toml
engine/src/: alpha_beta.rs  engine.rs  iterative_deepening.rs  lib.rs  tests.rs
lichess_bot/: Cargo.toml  README.md  config.yaml
lichess_bot/src/: main.rs  uci_answers.rs  uci_player.rs
model/: Cargo.toml
model/src/: chess_type.rs  game.rs  game_constructor.rs  lib.rs  motion_iterator.rs  moves.rs  moves_container.rs  utils.rs
model/src/game/: attacks.rs  constructor.rs  display.rs  moves.rs  precomputation.rs
src/: benchmark.rs  engine.rs  main.rs  model.rs  view.rs
src/engine/: alpha_beta.rs  engine.rs  iterative_deepening.rs
src/model/: chess_type.rs  engine.rs  game.rs  game_constructor.rs  motion_iterator.rs  moves.rs  moves_container.rs  precomputation.rs  tools.rs  utils.rs
src/model/game/: attacks.rs  precomputation.rs
src/tests/: test.rs  test_engine.rs  test_game_api.rs
src/view/: chessview.rs  fltk_view.rs  gtk_view.rs  terminal_display.rs  web_display.rs
ui/: Cargo.toml
ui/src/: main.rs  view.rs
ui/src/view/: chessview.rs  fltk_view.rs  terminal_display.rs  web_display.rs
